--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       ::-webkit-scrollbar {
           width: 5px;
           height: 8px;
-          background-color: #aaa; /* or add it to the track */
+          background-color: #e0e0e0; /* or add it to the track */
       }
 
       /* Add a thumb */
       ::-webkit-scrollbar-thumb {
-          background: #838383;
+          background: #c5c5c5;
       }
       h2 {
           font-size: 2vw;
